# rust-api-architecture-sample

./: Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2022-01-25-235414_create_posts/: down.sql  up.sql
src/: main.rs
src/domains/: documents.rs
src/interface_adaptors/: mod.rs  repositories.rs
src/interface_adaptors/databases/: models.rs  schema.rs
src/repositories/: documents.rs
src/server/: handlers.rs  mod.rs  requests.rs  responses.rs
src/usecases/: documents.rs
