[package]
name = "rust-api-architecture-sample"
version = "0.1.0"
authors = ["FUJII Yoshitaka <yoshiyoshifujii@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
futures = "0.3.19"
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.75"
dotenv = "0.15.0"
chrono = "0.4.19"
failure = "0.1.8"
ulid = "0.5.0"

[dependencies.diesel]
features = ["mysql", "chrono", "r2d2"]
version = "1.4.8"
